--- a/environments/scanpy.yml
+++ b/environments/scanpy.yml
@@ -7,8 +7,8 @@ dependencies:
  - statsmodels 
  - numba
  - nb_conda_kernels
- - python-igraph
  - pip:
+    - python-igraph 
     - scanpy
-    - "--editable=git+https://github.com/DmitryUlyanov/Multicore-TSNE.git#egg=Multicore-TSNE"
+    - "--editable=git+https://github.com/DmitryUlyanov/Multicore-TSNE.git#egg=MulticoreTSNE"
   
