--- a/environments/scanpy.yml
+++ b/environments/scanpy.yml
@@ -1,6 +1,4 @@
 name: scanpy-env
-channels:
- - marufr
 dependencies:
  - numpy
  - pandas
@@ -9,9 +7,9 @@ dependencies:
  - statsmodels 
  - numba
  - nb_conda_kernels
- - python-igraph
  - pip:
-    - pathlib
+    - build-essential
+    - python-igraph
     - scanpy
     - "--editable=git+https://github.com/DmitryUlyanov/Multicore-TSNE.git#egg=MulticoreTSNE"
   
