--- a/environments/scanpy.yml
+++ b/environments/scanpy.yml
@@ -8,7 +8,7 @@ dependencies:
  - numba
  - nb_conda_kernels
  - pip:
-    - python-igraph
+#    - python-igraph
     - scanpy
     - "--editable=git+https://github.com/DmitryUlyanov/Multicore-TSNE.git#egg=MulticoreTSNE"
   
